Bug 287242 - Empty error window when querying an ldap server
Summary: Empty error window when querying an ldap server
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-22 11:08 UTC by Albert Astals Cid
Modified: 2014-06-04 07:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments
The said screenshot (89.10 KB, image/png)
2011-11-22 11:08 UTC, Albert Astals Cid
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2011-11-22 11:08:23 UTC
Created attachment 65927 [details]
The said screenshot

Version:           unspecified (using KDE 4.7.2) 
OS:                Linux

When pressing the Query Server button i get an empty dialog with a big red cross

Reproducible: Always

Steps to Reproduce:
Press the query server button

Actual Results:  
See attached screenshot

Expected Results:  
If it is an error, give me a better message.
Comment 1 Laurent Montel 2012-07-03 08:37:34 UTC
I confirm it.
Will look at soon how to fix it
Comment 2 Albert Astals Cid 2012-07-03 08:44:17 UTC
If you need help reproducing this or the other ldap bugs i've opened just find me around akademy
Comment 3 Sandro Knauß 2014-06-04 07:48:08 UTC
Git commit ac7cd652903aec90985b49a24a43c4b026978364 by Sandro Knauß.
Committed on 03/06/2014 at 15:17.
Pushed by knauss into branch 'master'.

Fix 287242 - Empty error window when querying an ldap server

Showing a standard error text, when no one is returned from job.
FIXED-IN: 4.14
REVIEW: 118502

M  +5    -1    kldap/ldapconfigwidget.cpp

http://commits.kde.org/kdepimlibs/ac7cd652903aec90985b49a24a43c4b026978364