Fix 287242 - Empty error window when querying an ldap server

Showing a standard error text, when no one is returned from job.

BUG: 287242
FIXED-IN: 4.14
REVIEW: 118502